--- a/SystemTools.csproj
+++ b/SystemTools.csproj
@@ -4,12 +4,14 @@
 		<Nullable>enable</Nullable>
 		<LangVersion>latest</LangVersion>
 		<UseWindowsForms>true</UseWindowsForms>
+		<Platforms>Any CPU</Platforms>
 	</PropertyGroup>
 
 	<ItemGroup>
-		<PackageReference Include="ClassIsland.PluginSDK" Version="1.7.106-*" />
-		<PackageReference Include="ClassIsland.Core" Version="1.7.106-*" />
+		<PackageReference Include="ClassIsland.PluginSDK" Version="2.0.0.1" />
+		<PackageReference Include="ClassIsland.Core" Version="2.0.0.1" />
 		<PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="8.0.0" />
+		<PackageReference Include="System.Drawing.Common" Version="8.0.0" />
 	</ItemGroup>
 
 	<ItemGroup>
@@ -35,6 +37,9 @@
 			<CopyToOutputDirectory>Always</CopyToOutputDirectory>
 		</None>
 		<None Update="huifu.ps1">
+			<CopyToOutputDirectory>Always</CopyToOutputDirectory>
+		</None>
+		<None Update="ffmpeg.exe">
 			<CopyToOutputDirectory>Always</CopyToOutputDirectory>
 		</None>
 	</ItemGroup>
