--- a/SystemTools.csproj
+++ b/SystemTools.csproj
@@ -11,6 +11,10 @@
 		<PackageReference Include="ClassIsland.PluginSDK" Version="2.0.0.1" />
 		<PackageReference Include="ClassIsland.Core" Version="2.0.0.1" />
 		<PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="8.0.0" />
+		<PackageReference Include="Microsoft.Windows.CsWin32" Version="0.3.269">
+		  <PrivateAssets>all</PrivateAssets>
+		  <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+		</PackageReference>
 		<PackageReference Include="System.Drawing.Common" Version="8.0.0" />
 	</ItemGroup>
 
