--- a/manifest.yml
+++ b/manifest.yml
@@ -5,7 +5,7 @@
 
 id: SystemTools
 name: SystemTools
-description: 提供多彩而丰富的更多 行动/触发器/实用工具
+description: 提供多彩而丰富的更多 组件/行动/触发器/实用工具
 entranceAssembly: "SystemTools.dll"
 url: https://github.com/Programmer-MrWang/SystemTools
 version: 2.4.0.0
