--- a/.gitignore
+++ b/.gitignore
@@ -399,3 +399,13 @@ FodyWeavers.xsd
 
 # JetBrains Rider
 *.sln.iml
+/Lyricify Lite - README.md
+/images/PixPin_2026-02-27_17-43-16.png
+/images/PixPin_2026-02-27_17-42-25.png
+/images/PixPin_2026-02-27_17-42-58.png
+/images/PixPin_2026-02-27_17-43-42.png
+/images/PixPin_2026-02-27_17-43-55.png
+/images/PixPin_2026-02-27_17-44-02.png
+/images/PixPin_2026-02-27_17-44-28.png
+/images/PixPin_2026-02-27_17-54-41.png
+/images/PixPin_2026-02-27_17-58-10.png
